<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true" android:focusableInTouchMode="true"
    tools:context="com.mwenda.trackit.Register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logo" />
    <EditText
        android:id="@+id/editEmail"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:layout_below="@+id/imageView"/>
    <EditText
        android:id="@+id/editownPhone"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/ownPhone"
        android:layout_below="@+id/editEmail"/>
    <EditText
        android:id="@+id/editgsmPhone"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/gsmPhone"
        android:layout_below="@+id/editownPhone"/>
    <EditText
        android:id="@+id/editUsername"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/username"
        android:layout_below="@+id/editgsmPhone"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_text_input_layout"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUsername">
    <EditText
        android:id="@+id/editPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:layout_below="@+id/username_text_input_layout"/>
</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cpassword_text_input_layout"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text_input_layout">
        <EditText
            android:id="@+id/editCPassword"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/cpassword"
            android:layout_gravity="center"
            android:layout_below="@+id/cpassword_text_input_layout"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/register"
        android:onClick="register"
        android:layout_below="@+id/cpassword_text_input_layout"
        android:textColor="#fff"
        android:textSize="20sp"
        android:background="@drawable/btnshapes" />


    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:clickable="true"
        android:onClick="redirectLogin"
        android:textSize="17sp"
        android:layout_marginBottom="15dp"
        android:text="@string/already_registered"
        android:layout_below="@+id/buttonRegister"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
</ScrollView>
