<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFAFA"
    tools:context="com.mwenda.trackit.Authentication.MainActivity">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:contentDescription="Logo"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_text_input_layout"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUsername"
        android:layout_alignStart="@+id/editUsername">

    <EditText
        android:id="@+id/editPassword"
        android:layout_marginTop="20dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@+id/password_text_input_layout"></EditText>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/login"
        android:onClick="login"
        android:layout_below="@+id/password_text_input_layout"
        android:textColor="#fff"
        android:textSize="20sp"
        android:background="@drawable/btnshapes" />

    <TextView
        android:id="@+id/textForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="forgotPass"
        android:textSize="16sp"
        android:text="@string/forgotPass"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="redirectRegister"
        android:textSize="16sp"
        android:text="@string/dont_have_account"
        android:layout_below="@+id/textForgotPass"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
