<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mwenda.trackit.Account">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/editownPhone"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/ownPhoneNew"
        android:layout_below="@+id/imageView"/>
    <EditText
        android:id="@+id/editgsmPhone"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/gsmPhoneNew"
        android:layout_below="@+id/editownPhone"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editgsmPhone">
        <EditText
            android:id="@+id/editPassword"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwordNew"
            android:layout_gravity="center"
            android:layout_below="@+id/password_text_input_layout"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/buttonRegister"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/update_details"
        android:onClick="updateDetails"
        android:layout_below="@+id/password_text_input_layout"
        android:textColor="#fff"
        android:textSize="20sp"
        android:background="@drawable/btnshapes" />


</RelativeLayout>
